[package]
name = "audio-sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.3", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofty = "0.15"
walkdir = "2.4"
# symphonia = { version = "0.5", features = ["all"] }
# rusty-chromaprint = "0.3"
bliss-audio = { version = "0.11", features = ["aubio-static", "symphonia-all", "serde"], default-features = false }
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
rayon = "1.11.0"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
sysinfo = "0.30"
dashmap = "5.5"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
